# ai_life_os

./: .gitignore  DATABASE-FIX.md  QWEN.md  README.md  docker-compose.yml  fix-database.sh  rebuild-frontend.sh
.claude/: settings.local.json
.claude/commands/: adr.md  clarify.md  design-spike.md  fanout-tasks.md  implement.md  module-bootstrap.md  module-implement.md  module-tasks.md  module-verify.md  new-module.md  plan.md  publish-api.md  tasks.md
.codex/prompts/: speckit.specify.md
.qwen/: settings.json
.qwen/commands/: fanout-tasks.toml  implement.toml  module-implement.toml  module-tasks.toml
.specify/memory/: constitution.md
.specify/memory/public/: backend.core.api.md  backend.goals.api.md  frontend.design.api.md  frontend.goals.api.md  registry.yaml
.specify/scripts/: fanout_tasks.py  manifest_lint.py  new_module.py  registry_validate.py
.specify/scripts/bash/: setup-plan.sh
.specify/templates/: adr-template.md  clarify-template.md  design-spike-template.md  module-playbook-template.md  module-tasks-template.md  module_constitution_template.md  plan-template.md  public_manifest_template.md  spec-template.md  tasks-template.md
.specify/templates/contracts/: python_protocol_template.py  ts_contract_template.d.ts
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  run_migrations.sh
backend/alembic/: env.py
backend/alembic/versions/: 56a4fa4b8a43_create_goals_table.py  a0a435409c64_create_projects_and_tasks_tables.py  b1c2d3e4f5a6_create_milestones_table.py
backend/scripts/: export_milestones_openapi.py  export_openapi.py
backend/src/ai_life_backend/: __init__.py  app.py  database.py
backend/src/ai_life_backend/contracts/: __init__.py  core_protocols.py  goals_contracts.py  goals_openapi.yaml  milestones_openapi.yaml  milestones_protocols.py  projects_openapi.yaml  projects_protocols.py
backend/src/ai_life_backend/core/: __init__.py  httpkit.py  public.py
backend/src/ai_life_backend/errors/: __init__.py  models.py
backend/src/ai_life_backend/goals/: __init__.py
backend/src/ai_life_backend/goals/api/: __init__.py  routes.py  schemas.py
backend/src/ai_life_backend/goals/domain/: __init__.py  goal.py
backend/src/ai_life_backend/goals/public/: __init__.py
backend/src/ai_life_backend/goals/repository/: __init__.py  postgres_goal_repository.py
backend/src/ai_life_backend/goals/services/: __init__.py
backend/src/ai_life_backend/milestones/: __init__.py
backend/src/ai_life_backend/milestones/api/: __init__.py  routes.py  schemas.py
backend/src/ai_life_backend/milestones/domain/: __init__.py  milestone.py
backend/src/ai_life_backend/milestones/public/: __init__.py
backend/src/ai_life_backend/milestones/repository/: __init__.py  postgres_milestone_repository.py
backend/src/ai_life_backend/projects/: __init__.py
backend/src/ai_life_backend/projects/api/: __init__.py  routes.py  schemas.py
backend/src/ai_life_backend/projects/domain/: __init__.py  project.py  task.py
backend/src/ai_life_backend/projects/public/: __init__.py
backend/src/ai_life_backend/projects/repository/: __init__.py  in_memory_project_repository.py  in_memory_task_repository.py
backend/src/ai_life_backend/projects/services/: __init__.py  dag_validator.py
backend/tests/: test_smoke.py
backend/tests/goals/contract/: test_goals_api_contract.py
backend/tests/milestones/: __init__.py  test_api.py  test_domain.py
backend/tests/projects/: __init__.py  test_dag_validation.py  test_domain.py
docs/: typescript-strict-mode-guide.md
docs/public/: backend.core.api.md  backend.milestones.api.md  backend.projects.api.md  frontend.app-shell.api.md  frontend.dashboard.api.md  frontend.design.api.md  frontend.milestones.api.md  frontend.projects.api.md
frontend/: .dockerignore  .prettierignore  .prettierrc  Dockerfile  Makefile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/goals/: page.tsx
frontend/src/app/milestones/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/components/ui/: button.tsx  dialog.tsx
frontend/src/contracts/: app-shell.d.ts  dashboard.d.ts  design.d.ts  goals.d.ts  milestones.d.ts  projects.d.ts
frontend/src/features/app-shell/: AppLayout.tsx  (+4 more)
frontend/src/test/: setup.ts
specs/001-goals-management-mvp/: backend.goals-completion-report.md  data-model.md  frontend-integration-summary.md  frontend.goals-completion-report.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-goals-management-mvp/contracts/: backend.goals.api.md  frontend.goals.api.md
specs/001-goals-management-mvp/tasks.by-module/: backend.goals-tasks.md  frontend.design-tasks.md  frontend.goals-tasks.md  infra-tasks.md
specs/002-basic-navigation-mvp/: clarifications.md  handoff.md  plan.md  spec.md  tasks.md
specs/003-goal-projects-tasks-mvp/: plan.md  progress.json  progress.md  spec.md  tasks.md
specs/003-goal-projects-tasks-mvp/tasks.by-module/: frontend.milestones.md  frontend.projects.md
tests/integration/: test_cli.py
(+34 files in other folders)
